--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Prepare Workspace
-        uses: craftaro/GH-Commons/.github/actions/setup_workspace@master
+        uses: Songoda-Plugins/GH-Commons/.github/actions/setup_workspace@main
 
       - name: Run tests
         run: mvn -B clean test
@@ -39,13 +39,13 @@ jobs:
       - uses: actions/checkout@v4
 # TODO: Make sure the project doesn't need additional setup steps or change the action to your own.
       - name: Prepare Workspace
-        uses: craftaro/GH-Commons/.github/actions/setup_workspace@master
+        uses: Songoda-Plugins/GH-Commons/.github/actions/setup_workspace@main
         with:
           maven_username: ${{ secrets.PLUGINS_MAVEN_REPO_USERNAME }}
           maven_password: ${{ secrets.PLUGINS_MAVEN_REPO_PASSWORD }}
 
       - name: Set project version
-        uses: craftaro/GH-Commons/.github/actions/maven_set_project_version@master
+        uses: Songoda-Plugins/GH-Commons/.github/actions/maven_set_project_version@main
         with:
           append_snapshot: ${{ github.ref_type == 'tag' && 'false' || 'true' }}
           version: ${{ github.ref_type == 'tag' && github.ref_name || '' }}
@@ -71,7 +71,7 @@ jobs:
           path: ${{ env.PLUGIN_ARTIFACT_DIR }}/${{ env.PLUGIN_ARTIFACT_SELECTOR }}
 
       - name: Sign jar archives
-        uses: craftaro/GH-Commons/.github/actions/sign_jars@master
+        uses: Songoda-Plugins/GH-Commons/.github/actions/sign_jars@main
         with:
           jar_file_selector: ${{ env.DEPLOYMENT_ARTIFACT_DIR }}/${{ env.DEPLOYMENT_ARTIFACT_SELECTOR }}
           keystore_gpg_encrypted: ${{ secrets.PLUGINS_JARSIGNER_KEYSTORE_GPG }}
@@ -80,7 +80,7 @@ jobs:
 
       - name: Deploy to Maven repo
         if: ${{ github.event_name == 'push' }}
-        uses: craftaro/GH-Commons/.github/actions/maven_deploy@master
+        uses: Songoda-Plugins/GH-Commons/.github/actions/maven_deploy@main
         with:
           repository_url: ${{ vars.PLUGINS_MAVEN_REPO_URL_RELEASE }}
           repository_url_snapshots: ${{ vars.PLUGINS_MAVEN_REPO_URL_SNAPSHOT }}
@@ -90,7 +90,7 @@ jobs:
 # TODO: This step is needed in multi-module maven setups:
 #      - name: Deploy parent pom.xml to Maven repo
 #        if: ${{ github.event_name == 'push' }}
-#        uses: craftaro/GH-Commons/.github/actions/maven_deploy@master
+#        uses: Songoda-Plugins/GH-Commons/.github/actions/maven_deploy@main
 #        with:
 #          repository_url: ${{ vars.PLUGINS_MAVEN_REPO_URL_RELEASE }}
 #          repository_url_snapshots: ${{ vars.PLUGINS_MAVEN_REPO_URL_SNAPSHOT }}
@@ -107,7 +107,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Notify Webhook
-        uses: craftaro/GH-Commons/.github/actions/discord_send_job_results@master
+        uses: Songoda-Plugins/GH-Commons/.github/actions/discord_send_job_results@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           webhook_url: ${{ secrets.DISCORD_BUILD_STATUS_WEBHOOK }}
